tests/e2e/entity_minus4.error
Error: syntax error in story at line 1, column 10

1|    a = a + 0b
               ^

E0007: Missing value after `=`
