tests/e2e/entity_minus4.story
a = a + 0b
